# local-mind

./: .gitignore  README.md  pyproject.toml  setup.bat  setup.ps1
src/local_mind/: __main__.py  chat.py  cli.py  code_exec.py  config.py  decision.py  knowledge.py  models.py  server.py  voice.py  web_crawl.py
src/local_mind/assistant/: __init__.py  actions.py  apps.py  audio.py  engine.py  events.py  router.py  tts.py  vad.py  wake.py
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/public/: manifest.json
web-ui/src/: App.tsx  api.ts  index.css  types.ts
web-ui/src/components/: AssistantPage.tsx  ChatBubble.tsx  ChatInput.tsx  ChatWindow.tsx  CodeBlock.tsx  DecisionBadge.tsx  Sidebar.tsx  TopBar.tsx  TranscribePage.tsx  VoiceButton.tsx
web-ui/src/hooks/: useAssistant.ts  useChat.ts  useVoice.ts
