[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-mind"
version = "0.1.0"
description = "Lightweight local LLM assistant with RAG learning, chat, and voice — runs fully offline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "sentence-transformers>=3.3.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "trafilatura>=1.12.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.12.0",
    "huggingface-hub>=0.26.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
assistant = [
    "openwakeword>=0.6.0",
    "pyttsx3>=2.90",
    "pynput>=1.7.6",
    "screen-brightness-control>=0.23.0",
    "pywin32>=306; sys_platform == 'win32'",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
localmind = "local_mind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/local_mind"]

[tool.hatch.build.targets.sdist]
include = ["src/local_mind", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel.force-include]
"src/local_mind/ui_dist" = "local_mind/ui_dist"
